# controllers/main.go
@@ -29,6 +29,17 @@ type viewCreateForm struct {
 	Disabled bool   `json:"disabled"`
 }
 
+type recordCreateForm struct {
+	Domain  string `json:"domain" binding:"required"`
+	View    string `json:"view" binding:"required"`
+	Name    string `json:"name" binding:"required"`
+	Type    string `json:"type" binding:"required"`
+	Content string `json:"content" binding:"required"`
+	TTL     uint   `json:"ttl" binding:"required"`
+	Priority uint `json:"priority"`
+	Disabled bool   `json:"disabled"`
+	Comment  string `json:"comment"`
+}
 
 type aclCreateForm struct {
 	Name     string `json:"name" binding:"required"`
